# FBWA380LiveryConverter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-10-a380x-livery-converter.md  2026-07-13-overwrite-warning.md  2026-07-13-validation-batch-preview.md  2026-07-20-standalone-zip-antivirus.md
docs/superpowers/specs/: 2026-07-10-a380x-livery-converter-design.md  2026-07-13-overwrite-warning-design.md  2026-07-13-validation-batch-preview-design.md  2026-07-20-standalone-zip-antivirus-design.md
scripts/: build_exe.ps1
src/a380x_livery_converter/: __init__.py  __main__.py  cli.py  converter.py  gui.py
src/a380x_livery_converter/core/: aircraft_cfg.py  rename_map.py  scanner.py
src/a380x_livery_converter/output/: livery_gen.py  package_gen.py
src/a380x_livery_converter/resources/: rename_list.csv
src/a380x_livery_converter/texture/: dds.py  ktx2.py  pipeline.py  texconv.py
tests/: helpers.py  test_aircraft_cfg.py  test_cli.py  test_converter.py  test_dds.py  test_gui.py  test_ktx2.py  test_livery_gen.py  test_package_gen.py  test_pipeline.py  test_rename_map.py  test_scanner.py  test_setup.py  test_texconv.py
