[project]
name = "a380x-livery-converter"
version = "0.2.0"
description = "Convert FBW A380X MSFS 2020 liveries to native MSFS 2024 packages"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Manuel Ziesel (ToLaTE4u)" }]
dependencies = [
    "pillow>=10.0",
    "texture2ddecoder>=1.0.4",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "nuitka[onefile]>=4.1.3",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a380x_livery_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
